# DevHelp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
codefiles/: admin.py  apps.py  defaults.py  models.py  urls.py  views.py
codefiles/migrations/: 0001_initial.py  0002_codedocument_workspace.py  0003_codedocument_is_deleted.py
compare/: apps.py  urls.py  utils.py  views.py
config/: settings.py  site_urls.py  urls.py
core/: models.py
deploy/supervisor/: devhelp.conf
jsondocs/: admin.py  apps.py  defaults.py  models.py  urls.py  views.py
jsondocs/migrations/: 0001_initial.py  0002_jsondocument_workspace_alter_jsondocument_content.py  0003_jsondocument_is_deleted.py
markdown/: admin.py  defaults.py  models.py  urls.py  views.py
markdown/migrations/: 0001_initial.py  0002_markdowndocument_workspace.py  0003_markdowndocument_is_deleted.py
notes/: admin.py  models.py  tests.py  urls.py  utils.py  views.py
notes/migrations/: 0001_initial.py  0002_default_white_color.py  0003_note_workspace.py  0004_note_is_deleted.py
static/css/: app.css
static/js/: code-editor.js  compare-editor.js  history.js  (+18 more)
tables/: admin.py  models.py  urls.py  views.py
templates/: base.html  base_app.html
todos/: admin.py  apps.py  models.py  services.py  signals.py  urls.py  views.py
workspaces/: activity.py  apps.py  context_processors.py  middleware.py  models.py  permissions.py  services.py  signals.py  tests.py  urls.py  views.py
(+49 files in other folders)
