[project]
name = "arcbook"
version = "0.1.0"
description = "Personal workspace for notes, tasks, and tables"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<7",
    "daphne>=4.0",
    "pillow>=10.0",
    "bleach>=6.0",
    "python-dotenv>=1.0",
    "psycopg>=3.3.4",
]

[tool.uv]
package = false
